--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "debug": "ENV=dev PORT=9090 nodemon --watch controllers --watch models --watch index.js index.js"
+    "debug": "ENV=dev PORT=9090 nodemon --watch public --watch index.js"
   },
   "repository": {
     "type": "git",
